# seal-benchmark

./: .env.example  .gitignore  CLAUDE.md  README.md  canary.py  git-workflow-guide.md  pyproject.toml  run_single_eval.py  sample_questions.py  samples.json  sync_questions_to_hf.py
.claude/commands/: research-prime.md
analysis/: extract_eval_csvs.py
dataset/: hf_login.py  scenario_generation.py  scenario_quality_rules.md  scenario_taxonomy.md  seal_questions.csv  smoke_test.py
qualitative_analyses/: qa_template.ipynb
src/seal/: eval.py  scorer.py  seal_eval.py  seal_scorer.py  solver.py
