[project]
name = "seal-benchmark"
version = "0.1.0"
description = "SEAL — factual accuracy on animal sentience: benchmark for accurate, calibrated claims about animal sentience, cognition, and welfare practices in LLMs"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Allen Lu", email = "allen@sentientfutures.ai" }
]
requires-python = ">=3.12"
dependencies = [
    "inspect-ai>=0.3.212",
    "datasets>=4.4.1",
    "python-dotenv>=1.0.0",
    "openai>=2.8.1",
    "anthropic>=0.97.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "ruff>=0.12.0",
    "pytest>=7.0",
    # Scenario-generation pipeline (dataset/scenario_generation.py)
    "instructor>=1.15.4",
    "pandas>=2.2.0",
]
